--- a/app/scss/_contacts.scss
+++ b/app/scss/_contacts.scss
@@ -1,6 +1,6 @@
 .contacts {
   background-size: cover;
   background-image: url("../img/social.png");
-  background-position: center;
-  height: 100vh;
+  background-repeat: no-repeat;
+
 }
