--- a/app/scss/_skills.scss
+++ b/app/scss/_skills.scss
@@ -2,5 +2,74 @@
   background-size: cover;
   background-image: url("../img/skills.png");
   background-position: center;
-  height: 100vh;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.skills__title {
+  font-size: 50px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.skills__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  font-size: 80px;
+}
+
+.skills__item {
+  margin: 20px;
+  padding: 20px;
+  background-color: white;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+
+}
+
+.skills__item::before {
+  display: block;
+  height: 50px;
+  width: 50px;
+}
+
+.html5::before {
+  content: url("../img/logo/html.jpg");
+}
+
+.css3::before {
+  content: url("../img/logo/css.png");
+}
+
+.pug::before {
+  content: url("../img/logo/pug.png");
+}
+
+.gupl::before {
+  content: url("../img/logo/gulp.png");
+}
+
+.sass::before {
+  content: url("../img/logo/sass.png");
+}
+
+.photoshop::before {
+  content: url("../img/logo/ps.png");
+}
+
+.rwd::before {
+  content: url("../img/logo/rwd.jpg");
+}
+
+.js::before {
+  content: url("../img/logo/js.png");
+}
+
+.jquery::before {
+  content: url("../img/logo/jQurery.png");
+}
+
+.git::before {
+  content: url("../img/logo/git.png");
 }
