--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -15,9 +15,9 @@ a{
 .container {
   max-width: 1024px;
   margin: 0 auto;
+  padding: 0 10px;
 }
 
-@import "variables";
 @import "about";
 @import "skills";
 @import "portfolio";
